2003-05-09  hgg  <hgreig@bigpond.net.au>

		Update spell as current xfree86 has GL extension headers
		Glaxium still won't compile with any headers though.

2003-01-31  Eric Sandall <eric@sandall.us>

		Fixed Bug #2443

2002-10-23  Eric Sandall <eric@sandall.us>

		Re-added Agt's mirror (he updated to 0.5)

		Fixed a spelling error in SHORT

		Added braces around variables

2002-10-21  Eric Sandall <eric@sandall.us>

		Updated to v0.5

		Removed USEGCC2, works with gcc3

		Moved SOURCE_URL to maintainers site, as Agt's was out of date

		Added OpenGL patch from SGI for /usr/include/GL

2002-09-07  Arwed v. Merkatz <v.merkatz@gmx.net>

		Added USEGCC2 file

		BUILD fixes  (fixes BUG #877)

2002-09-04  Arwed v. Merkatz <v.merkatz@gmx.net>

		Added MD5 and LICENSE fields

		Changed MAINTAINER

2002-04-27  Jerome Zago <jerome.zago@insalien.org>

		SOURCE_URL[0] is now more generic.

		libpng workaround no longer necessary since 2002-04-29 (thanks
		Unet), therefore removed.

2002-04-26  Jerome Zago <jerome.zago@insalien.org>
 
		http://www.multimania.com/hosxe/ went 404 therefore updated
		SOURCE_URL[0] and WEB_SITE.

		Added workaround for the compilation to succeed
		(CPPFLAGS='-I/usr/include/libpng'). Added libpng to DEPENDS.

		/usr/games is created if needed.

		Man pages are now installed in /usr/share/man (FHS compliance).